[css] Font size is too small in windows with medium sizes  issue-7569

--- a/assets/scss/home-page.sass
+++ b/assets/scss/home-page.sass
@@ -42,27 +42,32 @@
 
     .title
       font-family: $concord-font
-      font-size: 2em
-      min-height: 4em
-
+      font-size: 1em
+      min-height: 3.5em
       @media screen and (min-width: 320px)
-        font-size: 2.1em
-
+        font-family: $concord-font
+        font-size: 2.5em
+        min-height: 4em
       @include media-breakpoint-up(sm)
-        font-size: 4.6em
-        min-height: 0
-
+        font-family: $concord-font
+        font-size: 2.5em
+        min-height: 4em
       @include media-breakpoint-up(md)
-        font-size: 2.6em
-
+        font-family: $concord-font
+        font-size: 2.5em
+        min-height: 4em
       @include media-breakpoint-up(lg)
-        font-size: 3.6em
-
+        font-family: $concord-font
+        font-size: 3.5em
+        min-height: 4em
       @include media-breakpoint-up(xl)
-        font-size: 2.1em
-
+        font-family: $concord-font
+        font-size: 4em
+        min-height: 4em
       @media screen and (min-width: 1400px)
-        font-size: 5.4em
+        font-family: $concord-font
+        font-size: 5.5em
+        min-height: 4em
 
       #typed
         br
@@ -217,10 +222,10 @@
           a
             text-decoration: none
             white-space: normal
-          /* stylelint-enable no-descending-specificity */
+/* stylelint-enable no-descending-specificity */
 
 .absolute-center
-  position: absolute;
+  position: absolute
   top: 50%
   left: 50%
   transform: translate(-50%, -50%)
